# MPV-Audio2Subs

./: .gitignore  Dockerfile  README.md  ai_engine.py  install.bat  install.sh  main.lua  main.py  pyproject.toml  requirements.txt  run_tests.py  server.py  test_e2e.py  test_qwen_asr.py  transcription.py
.claude/: settings.local.json
src/audio2subs/: __init__.py  __main__.py  audio.py  config.py  engine.py  exceptions.py  mpv_client.py  refinement.py  service.py  subtitle.py
src/audio2subs/transcription/: __init__.py  base.py  cohere.py  parakeet.py  qwen.py
src/audio2subs/utils/: performance.py
tests/: test_audio.py  test_engine.py  test_qwen.py  test_refinement.py  test_subtitle.py
